--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="8dp"
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView2_1"
+        android:id="@+id/textView1_1"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="#ccc"
         android:lineBreakWordStyle="none"
-        android:text="@string/sample" />
+        android:text="@string/sample"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView1_2"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="#eee"
+        android:lineBreakWordStyle="phrase"
+        android:text="@string/sample"
+        app:layout_constraintStart_toStartOf="@+id/textView1_1"
+        app:layout_constraintTop_toBottomOf="@+id/textView1_1" />
+
+    <com.ogapants.phrasebasedlinebreak.PhraseBasedLineBreakTextView
+        android:id="@+id/textView1_3"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="#4ba"
+        android:text="@string/sample"
+        app:layout_constraintEnd_toEndOf="@+id/textView1_2"
+        app:layout_constraintStart_toStartOf="@+id/textView1_2"
+        app:layout_constraintTop_toBottomOf="@+id/textView1_2" />
+
+
+    <TextView
+        android:id="@+id/textView2_1"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="#ccc"
+        android:lineBreakWordStyle="none"
+        android:text="@string/sample"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView1_3" />
 
     <TextView
         android:id="@+id/textView2_2"
-        android:layout_width="320dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:background="#eee"
         android:lineBreakWordStyle="phrase"
-        android:text="@string/sample" />
+        android:text="@string/sample"
+        app:layout_constraintStart_toEndOf="@+id/textView2_1"
+        app:layout_constraintTop_toBottomOf="@+id/textView1_3" />
 
-    <TextView
-        android:id="@+id/textView3_1"
+
+    <com.ogapants.phrasebasedlinebreak.PhraseBasedLineBreakTextView
+        android:id="@+id/textView2_3"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="#ccc"
-        android:lineBreakWordStyle="none"
-        android:text="@string/sample" />
+        android:background="#4ba"
+        android:text="@string/sample"
+        app:layout_constraintStart_toEndOf="@+id/textView2_2"
+        app:layout_constraintTop_toBottomOf="@+id/textView1_3" />
 
-    <TextView
-        android:id="@+id/textView3_2"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="#eee"
-        android:lineBreakWordStyle="phrase"
-        android:text="@string/sample" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
